--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
   "dependencies": {
     "body-parser": "*",
     "ejs": "^2.6.1",
-    "express": "*"
+    "express": "*",
+    "express-validator": "^5.3.0",
+    "mongodb": "^3.1.8",
+    "mongojs": "^2.6.0"
   },
   "author": "",
   "license": "ISC"
